[tool.poetry]
name = "rpd"
version = "0.3.0"
description = "Synchronous Discord Library For Python"
authors = ["Vincent <vincentbusiness55@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.2.3"
gevent = "^21.12.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
